# Snake_game

./: AchievementManager.cpp  AchievementManager.hpp  CMakeLists.txt  Constants.hpp  EmbeddedAssets.hpp  Food.hpp  GameSettings.hpp  ParticleSystem.cpp  ParticleSystem.hpp  README.md  ResourceManager.cpp  ResourceManager.hpp  StatsManager.cpp  StatsManager.hpp  main.cpp
